Floor markup fixed

--- a/skript/crypto/crypto.tex
+++ b/skript/crypto/crypto.tex
@@ -580,7 +580,7 @@ Da die Gesamtzahl der Workitems in einer Workgroup f"ur das aktuelle Beispiel
 8192 nicht "uberschreiten darf, k"onnen maximal
 
 \[
- n = \floor{\sqrt[3]{8192}} = \floor{20.159} = 20
+ n = \left\lfloor\sqrt[3]{8192}\right\rfloor = \left\lfloor20.159\right\rfloor = 20
 \]
 
 Qu"aderchen pro Dimension berechnet werden. Das entspricht einem W"urfel von 
